data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1289.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\65\78"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\07\90\80\80\80\00\01\0c\74\65\73"
    "\74\46\75\6e\63\74\69\6f\6e\00\01\0a\a7\80\80\80"
    "\00\01\a1\80\80\80\00\00\03\40\02\40\41\01\41\01"
    "\46\04\40\10\00\0c\02\05\02\40\02\40\41\00\0c\00"
    "\0c\01\0b\0b\0b\0b\0b\0b"
  )
""
)